# between

./: .travis.yml  ChangeLog.md  LICENSE  README.md  between.cabal  not-found.cabal  stack-lts-10.yaml  stack-lts-11.yaml  stack-lts-5.yaml  stack-lts-6.yaml  stack-lts-7.yaml  stack-lts-8.yaml  stack-lts-9.yaml  stack-nightly.yaml
between/: LICENSE  between.cabal
between/src/Data/Function/: Between.hs
not-found/: LICENSE  not-found.cabal
not-found-between/: .gitignore  README.md  not-found-between.cabal
not-found-between/src/Data/Function/: Between.hs
not-found-digits/: not-found-digits.cabal
not-found-digits/src/Data/: Digits.hs
not-found-digits/test/: TestCase.hs
not-found-digits/test/TestCase/Data/: Digits.hs
not-found/src/Data/Functor/: Utils.hs
not-found/src/Data/Monoid/: FirstNonEmpty.hs  LastNonEmpty.hs
not-found/test/: TestCase.hs
not-found/test/TestCase/Data/Functor/: Utils.hs
not-found/test/TestCase/Data/Monoid/: LastNonEmpty.hs
src/Control/Applicative/: LiftUtils.hs  Predicate.hs
src/Control/Monad/: Conditional.hs  Utils.hs
src/Data/: Digits.hs
src/Data/Function/: Between.hs
src/Data/Function/Between/: Lazy.hs  Strict.hs  Types.hs
src/Data/Function/Between/Strict/: Internal.hs
src/Data/Functor/: FlipT.hs  Utils.hs
src/Data/Monoid/: Endo.hs  FirstNonEmpty.hs  LastNonEmpty.hs
test/: TestCase.hs  unit-tests-main.hs
test/TestCase/Data/: Digits.hs
test/TestCase/Data/Functor/: FlipT.hs  Utils.hs
test/TestCase/Data/Monoid/: FirstNonEmpty.hs  LastNonEmpty.hs
tools/: hlint.sh  stack-ghc8.sh
