name:                   not-found
version:                0.6.0.0
synopsis:               Functions, mostly one-liners, that aren't in base.
description:
  Functions, mostly one-liners, that aren't in base, but make life easier.
homepage:               https://github.com/trskop/hs-not-found
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2011 - 2013 Peter Trško
category:               Control, Data
build-type:             Simple
cabal-version:          >=1.8

extra-source-files:
    README.md

flag pedantic
  description:
    Pass additional flags, including -Werror, to GHC during compilation.
  default: False

library
  hs-source-dirs:       src
  exposed-modules:
      Control.Applicative.LiftUtils
    , Control.Applicative.Predicate
    , Control.Monad.Conditional
    , Control.Monad.Utils
    , Data.Functor.FlipT
    , Data.Functor.Utils
    , Data.Monoid.Endo
  -- other-modules:
  build-depends:        base > 3 && < 5
  ghc-options:          -Wall
  if impl(ghc >= 6.8)
    ghc-options:        -fwarn-tabs
  if flag(pedantic)
    ghc-options:        -Werror
