name:                   not-found
version:                0.7.1.2
synopsis:
  Functions (mostly one-liners) and types that aren't in base.
description:
  Over the years of their work Haskellers tend to create a lot of small
  utilities and types that they use in various places. It's not uncommon that
  such patchworks are published as a small, and also not so small, libraries.
  This library is one of those, and we will see in what category it ends up
  over time.
  .
  All functions, types and instances in this library were at some point used in
  real world applications. One of the aspects of coding for user applications
  is that this library doesn't shy away from sensible language extensions.
  .
  README and ChangeLog can be found in source code package and on GitHub:
  .
  * <https://github.com/trskop/hs-not-found/blob/master/README.md>
  .
  * <https://github.com/trskop/hs-not-found/blob/master/ChangeLog.md>

homepage:               https://github.com/trskop/hs-not-found
bug-reports:            https://github.com/trskop/hs-not-found/issues
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2009, 2011 - 2013 Peter Trško
category:               Control, Data
build-type:             Simple
cabal-version:          >=1.8

extra-source-files:
    README.md
  , ChangeLog.md

flag pedantic
  description:
    Pass additional warning flags including -Werror to GHC during compilation.
  default: False

flag with-comonad
  description:
    Adds comonad to the list of dependencies and builds Comonad instances for
    various types.
  default: True

flag with-semigroups
  description:
    Adds semigroups to the list of dependencies and builds Semigroup instances
    for various types. Implied by -fwith-comonad.
  default: True

library
  hs-source-dirs:       src
  exposed-modules:
      Control.Applicative.LiftUtils
    , Control.Applicative.Predicate
    , Control.Monad.Conditional
    , Control.Monad.Utils
    , Data.Digits
    , Data.Functor.FlipT
    , Data.Functor.Utils
    , Data.Monoid.Endo
    , Data.Monoid.FirstNonEmpty
    , Data.Monoid.LastNonEmpty
  -- other-modules:

  build-depends:        base > 3 && < 5
  if flag(with-comonad)
    build-depends:      comonad >= 3.0.1.1 && < 4
    cpp-options:        -DWITH_COMONAD
  if flag(with-comonad) || flag(with-semigroups)
    build-depends:      semigroups >= 0.8.3 && < 1
    -- ^ Version range taken from comonad-3.0.2.
    cpp-options:        -DWITH_SEMIGROUPS

  ghc-options:          -Wall
  if impl(ghc >= 6.8)
    ghc-options:        -fwarn-tabs
  if flag(pedantic)
    ghc-options:        -Werror

test-suite not-found-unit-tests
  hs-source-dirs:       src, test
  type:                 exitcode-stdio-1.0
  main-is:              unit-tests-main.hs
  other-modules:
      Control.Applicative.LiftUtils
    , Control.Applicative.Predicate
    , Control.Monad.Conditional
    , Control.Monad.Utils
    , Data.Digits
    , Data.Functor.FlipT
    , Data.Functor.Utils
    , Data.Monoid.Endo
    , Data.Monoid.FirstNonEmpty
    , Data.Monoid.LastNonEmpty
    , TestCase
    , TestCase.Data.Digits
    , TestCase.Data.Functor.FlipT
    , TestCase.Data.Functor.Utils
    , TestCase.Data.Monoid.FirstNonEmpty
    , TestCase.Data.Monoid.LastNonEmpty

  build-depends:
      base > 3 && < 5

    -- Test dependencies:
    , HUnit >= 1.2 && < 2
      -- ^ Same constraints as test-framework-hunit
 -- , QuickCheck >= 2.4 && < 2.6
      -- ^ Same constraints as test-framework-quickcheck2
    , test-framework >= 0.8 && < 1
      -- ^ Same constraint as test-framework-skip, other packages that
      -- depend on it have less restrictive bounds.
    , test-framework-hunit >= 0.2.6
      -- ^ Lower versions have more restrictive bounds on test-framework.
 -- , test-framework-quickcheck2 >= 0.3
      -- ^ There were changes in QuickCheck bounds in 0.2 branch and last one
      -- on it had a compilation failure on Hackage.

      -- Not required right now:
 -- , test-framework-skip == 1.*
      -- ^ Currently there is only version 1.0.
  if flag(with-comonad)
    build-depends:      comonad >= 3.0.1.1 && < 4
    cpp-options:        -DWITH_COMONAD
  if flag(with-comonad) || flag(with-semigroups)
    build-depends:      semigroups >= 0.8.3 && < 1
    -- ^ Version range taken from comonad-3.0.2.
    cpp-options:        -DWITH_SEMIGROUPS

  ghc-options:          -Wall
  if impl(ghc >= 6.8)
    ghc-options:        -fwarn-tabs
  if flag(pedantic)
    ghc-options:        -Werror

source-repository head
  type:                 git
  location:             git://github.com/trskop/hs-not-found.git
