name:                   not-found-between
version:                0.8.1.0
synopsis:               "Between" function combinator.
description:
  Over the years of their work Haskellers tend to create a lot of small
  utilities and types that they use in various places. It's not uncommon that
  such patchworks are published as a small, and also not so small, libraries.
  This library is one of those, and we will see in what category it ends up
  over time.
  .
  All functions, types and instances in this library were at some point used in
  real world applications. One of the aspects of coding for user applications
  is that this library doesn't shy away from sensible language extensions.
  .
  README and ChangeLog can be found in source code package and on GitHub:
  .
  * <https://github.com/trskop/hs-not-found/blob/master/README.md>
  .
  * <https://github.com/trskop/hs-not-found/blob/master/ChangeLog.md>

homepage:               https://github.com/trskop/hs-not-found
bug-reports:            https://github.com/trskop/hs-not-found/issues
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2013, 2014 Peter Trško
category:               Data
build-type:             Simple
cabal-version:          >=1.8

extra-source-files:
    README.md
  , ChangeLog.md

flag pedantic
  description:
    Pass additional warning flags including -Werror to GHC during compilation.
  default: False

library
  hs-source-dirs:       src
  exposed-modules:      Data.Function.Between
  -- other-modules:

  build-depends:        base > 3 && < 5

  ghc-options:          -Wall
  if impl(ghc >= 6.8)
    ghc-options:        -fwarn-tabs
  if flag(pedantic)
    ghc-options:        -Werror

source-repository head
  type:                 git
  location:             git://github.com/trskop/hs-not-found.git
